--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,42 +3,34 @@
 @tailwind components;
 
 @font-face {
-  font-family: 'SpaceGrotesk';
-  src: local('SpaceGrotesk'),
-    url(./fonts/SpaceGrotesk-Regular.otf) format('opentype');
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'SpaceGrotesk';
-  src: local('SpaceGrotesk'),
-    url(./fonts/SpaceGrotesk-Light.otf) format('opentype');
-  font-weight: 200;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'SpaceGrotesk';
-  src: local('SpaceGrotesk'),
-    url(./fonts/SpaceGrotesk-Bold.otf) format('opentype');
+  font-family: 'Montserrat';
+  src: local('Montserrat-Black'),
+    url(./fonts/Montserrat-Black.ttf) format('truetype');
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'SpaceGrotesk';
-  src: local('SpaceGrotesk'),
-    url(./fonts/SpaceGrotesk-SemiBold.otf) format('opentype');
+  font-family: 'Montserrat';
+  src: local('Montserrat-Bold'),
+    url(./fonts/Montserrat-Bold.ttf) format('truetype');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'SpaceGrotesk';
-  src: local('SpaceGrotesk'),
-    url(./fonts/SpaceGrotesk-Medium.otf) format('opentype');
+  font-family: 'Montserrat';
+  src: local('Montserrat-Medium'),
+    url(./fonts/Montserrat-Medium.ttf) format('truetype');
   font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: local('Montserrat-Regular'),
+    url(./fonts/Montserrat-Medium.ttf) format('truetype');
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -51,4 +43,8 @@
 
 body {
   transition: filter 1s;
+}
+
+html {
+  background-color: #f6f6f6;
 }
